--- a/src/Controls/samples/Controls.Sample.Sandbox/MainPage.xaml
+++ b/src/Controls/samples/Controls.Sample.Sandbox/MainPage.xaml
@@ -4,4 +4,15 @@
     x:Class="Maui.Controls.Sample.MainPage"
     xmlns:local="clr-namespace:Maui.Controls.Sample">
 
+    <ScrollView>
+        <VerticalStackLayout Margin="0,10,0,0" IgnoreSafeArea="False">
+            <Button ImageSource="dotnet_bot.png" 
+                    Text="Button 3 with a super duper extremely very long super duper extremely very long super duper extremely very long text box" 
+                    ContentLayout="Left, 20" 
+                    LineBreakMode="WordWrap"
+                    WidthRequest="200"
+                    Background="LightGray"/>
+        </VerticalStackLayout>
+    </ScrollView>
+    
 </ContentPage>
