--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue6625.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue6625.xaml
@@ -3,11 +3,18 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Maui.Controls.Sample.Issues.Issue6625">
     <ContentPage.Content>
-        <Grid x:Name="Container">
+        <Grid x:Name="Container"
+              RowDefinitions="Auto,*">
+            <Label x:Name="Label"
+                   Grid.Row="0"
+                   LineBreakMode="CharacterWrap"
+                   HorizontalOptions="Center"
+                   Padding="8,16"/>
             <Image x:Name="Image"
-                   HeightRequest="300"
-                   VerticalOptions="Center"
-                   HorizontalOptions="Center" />
+                 Grid.Row="1"
+                 HeightRequest="300"
+                 VerticalOptions="Center"
+                 HorizontalOptions="Center" />
         </Grid>
     </ContentPage.Content>
 </ContentPage>
