[samples] Fix samples

--- a/src/Controls/samples/Controls.Sample/Pages/Controls/CarouselViewGalleries/CarouselXamlGallery.xaml
+++ b/src/Controls/samples/Controls.Sample/Pages/Controls/CarouselViewGalleries/CarouselXamlGallery.xaml
@@ -11,7 +11,7 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
