--- a/src/Core/src/Platform/Windows/Styles/WindowRootViewStyle.xaml
+++ b/src/Core/src/Platform/Windows/Styles/WindowRootViewStyle.xaml
@@ -14,35 +14,28 @@
         x:Key="MauiAppTitleBarContainerTemplateSelector"/>
 
     <DataTemplate x:Key="MauiAppTitleBarTemplateDefault">
-        <Grid
+        <Border
             Canvas.ZIndex="1" 
             VerticalAlignment="Stretch"
-            HorizontalAlignment="Stretch"
-            Margin="{Binding WindowTitleMargin}">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Image 
-                x:Name="AppFontIcon"
-                HorizontalAlignment="Left" 
-                VerticalAlignment="Center"
-                Source="Square44x44Logo.png"
-                Visibility="{Binding WindowTitleIconVisibility}"
-                Width="16" 
-                Height="16"
-                Margin="8,0,0,0"/>
-            <TextBlock x:Name="AppTitle"
-                 VerticalAlignment="Center"
-                 Margin="16,0,0,0"
-                 MinWidth="48"
-                 Text="{Binding WindowTitle}"
-                 Foreground="{Binding WindowTitleForeground}"
-                 Style="{StaticResource CaptionTextBlockStyle}"
-                 Grid.Column="1"
-                 TextTrimming="CharacterEllipsis"
-                 TextWrapping="NoWrap"/>
-        </Grid>
+            Margin="0,0,0,0">
+            <StackPanel Orientation="Horizontal" Margin="12, 0, 0, 0" x:Name="RootStackPanel">
+                <Image 
+                    x:Name="AppFontIcon"
+                    HorizontalAlignment="Left" 
+                    VerticalAlignment="Center"
+                    Source="Square44x44Logo.png"
+                    Visibility="{Binding WindowTitleIconVisibility}"
+                    Width="16" 
+                    Height="16"/>
+                <TextBlock 
+                    x:Name="AppTitle"
+                    VerticalAlignment="Center"
+                    Margin="{Binding WindowTitleMargin}"
+                    Text="{Binding WindowTitle}"
+                    Foreground="{Binding WindowTitleForeground}"
+                    Style="{StaticResource CaptionTextBlockStyle}" />
+            </StackPanel>
+        </Border>
     </DataTemplate>
 
     <DataTemplate x:Key="MauiAppTitleBarContainerTemplateDefault">
