--- a/src/Controls/samples/Controls.Sample.Sandbox/SandboxShell.xaml
+++ b/src/Controls/samples/Controls.Sample.Sandbox/SandboxShell.xaml
@@ -4,19 +4,21 @@
     x:Class="Maui.Controls.Sample.SandboxShell"
     xmlns:local="clr-namespace:Maui.Controls.Sample"
     x:Name="shell">
-    <TabBar Shell.TabBarForegroundColor="Green"
-        Shell.TabBarUnselectedColor="Red">
+    <FlyoutItem Shell.TabBarForegroundColor="Green"
+        Shell.TabBarUnselectedColor="Red" Title="Cats">
         <Tab Title="MainPage1" Icon="groceries.png">
             <ShellContent Icon="groceries.png"
             Title="Home"
             ContentTemplate="{DataTemplate local:MainPage}"
             Route="MainPage" />
         </Tab>
+    </FlyoutItem>
+    <FlyoutItem Shell.TabBarForegroundColor="Green" Title="Dogs">
         <Tab Title="MainPage2" Icon="dotnet_bot.png">
             <ShellContent Icon="dotnet_bot.png"
             Title="Home"
             ContentTemplate="{DataTemplate local:MainPage}"
             Route="MainPage2" />
         </Tab>
-    </TabBar>
+    </FlyoutItem>
 </Shell>
