--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue18443.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue18443.xaml
@@ -3,6 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Maui.Controls.Sample.Issues.Issue18443">
 
-  <Entry x:Name="entry" Text="Microsoft Maui Entry"></Entry>
-  
+  <Entry x:Name="entry" Text="Microsoft Maui Entry" SelectionLength="3"></Entry>
+
 </ContentPage>
