--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue23488.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue23488.xaml
@@ -8,7 +8,7 @@
     <Label Text="hyperlink"
            TextColor="Blue"
            TextDecorations="Underline" />
-    <Label>
+    <Label AutomationId="WaitForLabelControl">
       <Label.FormattedText>
         <FormattedString>
           <Span Text="hyperlink" 
