--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue22937.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue22937.xaml
@@ -1,18 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage
-    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    Shell.TitleColor="Red"
-    x:Class="Maui.Controls.Sample.Issues.Issue22937">
+<Shell xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+       xmlns:ns="clr-namespace:Maui.Controls.Sample.Issues"
+       Shell.TitleColor="Red"
+       x:Class="Maui.Controls.Sample.Issues.Issue22937">
 
-  <ContentPage.ToolbarItems>
+  <Shell.ToolbarItems>
     <ToolbarItem x:Name="ChangeState" AutomationId="ChangeState" Text="Edit" Clicked="ChangeStateClicked"/>
     <ToolbarItem x:Name="SaveButton" AutomationId="SaveButton" Text="Save"/>
-  </ContentPage.ToolbarItems>
+  </Shell.ToolbarItems>
 
-  <Grid>
-    <Label Text="Issue 22937"
-           HorizontalOptions="Center"
-           VerticalOptions="Center"/>
-  </Grid>
-</ContentPage>
+  <ShellContent
+            Title="Home page"
+            ContentTemplate="{DataTemplate ns:Issue22937ContentPage}"
+            Route="MainPage">
+  </ShellContent>
+</Shell>
