--- a/src/Controls/tests/TestCases.HostApp/Issues/Issues22899.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issues22899.xaml
@@ -10,6 +10,7 @@
                 Clicked="Button_Clicked"/>
             <Label 
                 Text="Button clicked"
+                AutomationId="label"
                 IsVisible="False"
                 x:Name="label"/>
         </VerticalStackLayout>
