--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue21325.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue21325.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Maui.Controls.Sample.Issues.Issue21325">
 
-    <StackLayout x:Name="greyShades">
+    <StackLayout AutomationId="greyShades">
         <Entry Background="Grey" Text="Microsoft Entry"/>
         <Editor Background="DimGrey" Text="Microsoft Editor"/>
         <Label Background="SlateGrey" Text="Microsoft Label"/>
