--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue8788.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue8788.xaml
@@ -3,7 +3,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
         x:Class="Maui.Controls.Sample.Issues.Issue8788"
         xmlns:local="clr-namespace:Maui.Controls.Sample.Issues"
-        Shell.FlyoutBehavior="Flyout">
+        Shell.FlyoutBehavior="Flyout"
+        AutomationId="MenuItem"
+       >
 
   <MenuItem x:Name="MenuItem" Text="Tap me to reproduce bug on android" 
               Clicked="MenuItem_Clicked" AutomationId="FirstButton" />
