add automation ID and try changing ios screenshot again

--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue22306_3.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue22306_3.xaml
@@ -305,8 +305,8 @@
                         </HorizontalStackLayout>
                 </ScrollView>
 
-                <Button x:Name="Page8_6Button" Text="ScrollToMiddle" Pressed="ScrollToMiddlePressed" />
-                <Button x:Name="Page8_7Button" Text="ScrollToEnd" Pressed="ScrollToEndPressed" />
+                <Button x:Name="Page8_6Button" AutomationId="Page8_6Button" Text="ScrollToMiddle" Pressed="ScrollToMiddlePressed" />
+                <Button x:Name="Page8_7Button" AutomationId="Page8_7Button" Text="ScrollToEnd" Pressed="ScrollToEndPressed" />
 
             </VerticalStackLayout>
         </ScrollView>
