--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue20706.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue20706.xaml
@@ -7,20 +7,19 @@
     <local:ViewModelClass/>
   </ContentPage.BindingContext>
   <ContentPage.Content>
-
     <VerticalStackLayout>
-      <Stepper AutomationId="Stepper"
-               x:Name="stepper"
-	             Increment="{Binding Increment}" />
-      <Entry AutomationId="Entry1" 
-	          Text="{Binding Value, Source={x:Reference stepper}}"/>
+      <Stepper AutomationId="stepper" x:Name="stepperValue"
+               Maximum="1000"
+	            Increment="{Binding Increment}" />
+      <Entry AutomationId="entry" 
+	          Text="{Binding Value,Source={x:Reference stepperValue}} "/>
       <HorizontalStackLayout>
         <Border x:Name="lbl01"
 	               StrokeShape="RoundRectangle 5,5,5,5"
 	               StrokeThickness="{Binding Stroke01}"
 	            BackgroundColor="Blue"
 	               Padding="5,0,5,0">
-          <Label Text="0,1" AutomationId="Label0.1"
+          <Label Text="0,1" AutomationId="label0.1"
 	                  WidthRequest="30"
 	                  HeightRequest="30"
 	                  HorizontalTextAlignment="Center"
@@ -36,7 +35,7 @@
 	               StrokeThickness="{Binding Stroke1}"
 	       BackgroundColor="Blue"
 	               Padding="5,0,5,0">
-          <Label Text="1"  AutomationId="Label1"
+          <Label Text="1"  AutomationId="label1"
 	                              WidthRequest="30"
 	                              HeightRequest="30"
 	                              HorizontalTextAlignment="Center"
@@ -47,12 +46,12 @@
             </Label.GestureRecognizers>
           </Label>
         </Border >
-        <Border x:Name="Border1"
+        <Border x:Name="border1"
 	               StrokeShape="RoundRectangle 5,5,5,5"
 	               StrokeThickness="{Binding Stroke10}"
 	             BackgroundColor="Blue"
 	               Padding="5,0,5,0">
-          <Label Text="10" AutomationId="Label10"
+          <Label Text="10" AutomationId="label10"
 	                              WidthRequest="30"
 	                              HeightRequest="30"
 	                              HorizontalTextAlignment="Center"
@@ -68,7 +67,7 @@
 	               StrokeThickness="{Binding Stroke100}"
 	           BackgroundColor="Blue"
 	               Padding="5,0,5,0">
-          <Label Text="100" AutomationId="Label100"
+          <Label Text="100" AutomationId="label100"
 	                              WidthRequest="30"
 	                              HeightRequest="30"
 	                              HorizontalTextAlignment="Center"
@@ -82,7 +81,7 @@
       </HorizontalStackLayout>
       <HorizontalStackLayout Spacing="5">
         <Label Text="The choosen increment value is:" />
-        <Label Text="{Binding Source={x:Reference stepper}, Path=Increment}"/>
+        <Label Text="{Binding Source={x:Reference stepperValue}, Path=Increment}"/>
       </HorizontalStackLayout>
     </VerticalStackLayout>
   </ContentPage.Content>
