--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue21325.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue21325.xaml
@@ -3,14 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Maui.Controls.Sample.Issues.Issue21325">
 
-    <StackLayout AutomationId="greyShades">
-        <Entry Background="Grey" Text="Microsoft Entry"/>
-        <Editor Background="DimGrey" Text="Microsoft Editor"/>
-        <Label Background="SlateGrey" Text="Microsoft Label"/>
-        <Button Background="DarkGrey" Text="Microsoft Button"/>
-        <Slider Background="DarkSlateGrey"/>
-        <Switch Background="LightGrey"/>
-        <CheckBox Background="LightSlateGrey"/>
-        <Entry Background="SlateGrey" Text="Microsoft Entry2"/>
-    </StackLayout>
+    <Label Background="SlateGrey" AutomationId="greyShades" Text="Microsoft Label"/>
+
 </ContentPage>
