--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue22528.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue22528.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Maui.Controls.Sample.Issues.Issue22528" >
 
-<Grid Padding="24" AutomationId="labels" RowDefinitions="Auto,Auto"><Label BackgroundColor="Green" FontSize="20" Text="ÑÑÑÑÑÑÑÑÑÑÑÑÑÑÑÑÑÑÑÑÑ"/><Label Grid.Row="1" BackgroundColor="Red" LineHeight="0.8" FontSize="20" Text="ÑÑÑÑÑÑÑÑÑÑÑÑÑÑÑÑÑÑÑÑÑ"/>
+<Grid Padding="24" AutomationId="labels" RowDefinitions="Auto,Auto">
+<Label BackgroundColor="Green" FontSize="20" Text="ÑÑÑÑÑÑÑÑÑÑÑÑÑÑÑÑÑÑÑÑÑ"/><Label Grid.Row="1" BackgroundColor="Red" LineHeight="0.8" FontSize="20" Text="ÑÑÑÑÑÑÑÑÑÑÑÑÑÑÑÑÑÑÑÑÑ"/>
 </Grid>
 </ContentPage>
