Fix-19152-Updated Automation ID.

--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue19152.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue19152.xaml
@@ -7,9 +7,9 @@
         <VerticalStackLayout
         Padding="30,0"
         Spacing="25">
-            <Entry Background="White" AutomationId="entryControl" x:Name="entryControl" TextColor="Blue" Text="Entry Text" ClearButtonVisibility="WhileEditing"/>
-            <Button AutomationId="buttonControl"
-            x:Name="CounterBtn"
+            <Entry Background="White" AutomationId="entry" x:Name="entry" TextColor="Blue" Text="Entry Text" ClearButtonVisibility="WhileEditing"/>
+            <Button AutomationId="button"
+            x:Name="button"
             Text="Click me" 
             SemanticProperties.Hint="Counts the number of times you click"
             Clicked="OnCounterClicked"
