Updated the Issue method name

--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue14708.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue14708.xaml
@@ -7,7 +7,7 @@
                VerticalOptions="Center">
 
     <SearchBar Placeholder="Enter the text" Text="Investigate SearchBar presentation in horizontal screen orientation" 
-               AutomationId="searchBarControl" />
+               AutomationId="searchBar" />
   </StackLayout>
 
 </ContentPage>
