--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue15991.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue15991.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Maui.Controls.Sample.Issues.Issue15991"
              Title="Issue15991">
-    <ScrollView>
+    <ScrollView AutomationId="scrollView">
         <VerticalStackLayout BackgroundColor="AliceBlue">
             <FlexLayout AutomationId="flexLayout" Direction="Column" Padding="16" BackgroundColor="LightGreen">
                 <BoxView WidthRequest="40" HeightRequest="20" Color="Red"  />
