--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue18204.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue18204.xaml
@@ -3,7 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Maui.Controls.Sample.Issues.Issue18204"
              Title="Issue18204">
-
+    <ContentPage.Resources>
+      <Color x:Key="TealFadeStart">#1B836D</Color>
+      <Color x:Key="TealFadeEnd">#015b66</Color>
+      <Color x:Key="TealFadeStartHover">#2aab88</Color>
+      <Color x:Key="TealFadeEndHover">#026875</Color>
+    </ContentPage.Resources>
     <VerticalStackLayout Padding="24">
       <Border
         HorizontalOptions="Center"
@@ -12,6 +17,34 @@
         Shadow="{Shadow Brush=Black, Offset='0,2', Radius=2, Opacity=0.20}"
         StrokeShape="{RoundRectangle CornerRadius=20}">
         <Button x:Name="TheButton" Clicked="ButtonClicked" BackgroundColor="LightGreen" WidthRequest="200" HeightRequest="500" />
+      </Border>
+      <Border x:Name="TheOtherButton"
+              BackgroundColor="Transparent"
+              StrokeShape="{RoundRectangle CornerRadius=20}"
+              StrokeThickness="0"
+              IsVisible="False"
+              Stroke="Transparent">
+        <Border.Background>
+          <LinearGradientBrush StartPoint="0,0" EndPoint="1,0">
+            <GradientStop Offset="0.1" Color="{DynamicResource TealFadeEnd}" />
+            <GradientStop Offset="1.0" Color="{DynamicResource TealFadeStart}" />
+          </LinearGradientBrush>
+        </Border.Background>
+        <Border.Content>
+          <Grid ColumnDefinitions="auto,*,auto"
+                Padding="16,8">
+              <Label Grid.Column="0"
+                     FontSize="24"
+                     Text="Hello" />
+              <Label Grid.Column="1"
+                     FontSize="24"
+                     Text="awesome"
+                     HorizontalTextAlignment="Center"/>
+              <Label Grid.Column="2"
+                     FontSize="24"
+                     Text="World!" />
+          </Grid>
+        </Border.Content>
       </Border>
     </VerticalStackLayout>
 </ContentPage>
