--- a/src/Controls/tests/TestCases.HostApp/Issues/Github5623.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Github5623.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:Maui.Controls.Sample.CollectionViewGalleries"
-             x:Class="Maui.Controls.Sample.Issues.CollectionViewInfiniteScroll2">
+             x:Class="Maui.Controls.Sample.Issues.Github5623">
 <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="200"/>
