review comments addressed

--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue15524.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue15524.xaml
@@ -5,7 +5,7 @@
 
     <StackLayout>
         <Entry Text="Microsoft" AutomationId="entry" HorizontalOptions="center" VerticalOptions="center"/>
-        <Button Text="ChangeTheme" Clicked="Button_Clicked"/>
+        <Button Text="ChangeTheme" AutomationId="changeTheme" Clicked="Button_Clicked"/>
     </StackLayout>
     
 </ContentPage>
