--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue24405.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue24405.xaml
@@ -5,8 +5,8 @@
 				 x:Class="Maui.Controls.Sample.Issues.Issue24405">
   <local:TestContentPage.Content>
     <StackLayout>
-      <Entry AutomationId="entry" Placeholder="Enter text here" HorizontalTextAlignment="End"/>
-      <Button AutomationId="button" x:Name="button" Clicked="Button_Clicked"/>
+      <Entry AutomationId="entry" x:Name="entry" Placeholder="Enter text here" HorizontalTextAlignment="End"/>
+      <Button AutomationId="button" Text="Click" Clicked="Button_Clicked"/>
     </StackLayout>
   </local:TestContentPage.Content>
 </local:TestContentPage>
