--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue24405.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue24405.xaml
@@ -4,9 +4,9 @@
 				 xmlns:local="clr-namespace:Maui.Controls.Sample.Issues"
 				 x:Class="Maui.Controls.Sample.Issues.Issue24405">
   <local:TestContentPage.Content>
-    <StackLayout>
+    <VerticalStackLayout>
       <Entry AutomationId="entry" x:Name="entry" Placeholder="Enter text here" HorizontalTextAlignment="End"/>
-      <Button AutomationId="button" Text="Click" Clicked="Button_Clicked"/>
-    </StackLayout>
+      <Button AutomationId="button" Text="Click" Clicked="OnButtonClicked"/>
+    </VerticalStackLayout>
   </local:TestContentPage.Content>
 </local:TestContentPage>
