--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue15196.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue15196.xaml
@@ -4,7 +4,7 @@
               x:Class="Maui.Controls.Sample.Issues.Issue15196">
 
   <StackLayout x:Name="stackLayout">
-    <Frame x:Name="frame" AutomationId="FrameWithEntry" HeightRequest="200">
+    <Frame x:Name="frame" HeightRequest="200">
       <Entry x:Name="entry" Text="This is entry inside the frame"/>
     </Frame>
 
