--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue22715.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue22715.xaml
@@ -31,6 +31,7 @@
                         Keyboard="Numeric"
                         ReturnType="Next"
                         HorizontalOptions="Fill"
+                        Focused="EntNumber_Focused"
                         TextColor="Black" />
                 </Border>
             </Grid>
