--- a/src/Controls/tests/TestCases.HostApp/Issues/Issue24405.xaml
+++ b/src/Controls/tests/TestCases.HostApp/Issues/Issue24405.xaml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<local:TestContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
 				 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
 				 xmlns:local="clr-namespace:Maui.Controls.Sample.Issues"
 				 x:Class="Maui.Controls.Sample.Issues.Issue24405">
-  <local:TestContentPage.Content>
-    <VerticalStackLayout>
-      <Entry AutomationId="entry" x:Name="entry" Placeholder="Enter text here" HorizontalTextAlignment="End"/>
-      <Button AutomationId="button" Text="Click" Clicked="OnButtonClicked"/>
-    </VerticalStackLayout>
-  </local:TestContentPage.Content>
-</local:TestContentPage>
+  <VerticalStackLayout>
+    <Entry AutomationId="entry" x:Name="entry" Placeholder="Enter text here" HorizontalTextAlignment="End"/>
+    <Button AutomationId="button" Text="Click" Clicked="OnButtonClicked"/>
+  </VerticalStackLayout>
+</ContentPage>
